<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ButtonToPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@+id/ButtonAdd"
        android:text="Plan" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"

        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:background="@drawable/ic_searchbar_background"

        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        app:iconifiedByDefault="false"
        app:queryHint="Search For a Recipe..."

        />
    <Spinner
        android:id="@+id/sortBy"
        android:layout_below="@id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sorting_options"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homePageRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/sortBy"
        android:layout_above="@+id/ButtonAdd"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginTop="170dp"
        android:layout_marginBottom="68dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp" />

    <Button
        android:id="@+id/ButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="20dp"
        android:text="Add" />

</RelativeLayout>
