...
        android:backgroundTint="#03A9F4"
        android:text="@string/back_button"
        android:visibility="visible" />

    <!-- Delete Recipe -->
    <Button
        android:id="@+id/confirmDelete"
        android:layout_width="140dp"
        android:layout_height="65dp"
        android:layout_below="@+id/displayMessage"
        android:layout_marginTop="45dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp"
...
